<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filterActivityRootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:orientation="vertical"
    tools:context=".FilterActivity">

...
            android:layout_weight="1"
            android:text="-"
            android:textAlignment="center"
            android:textSize="19sp" />

        <ImageView
            android:id="@+id/startDateImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_calendar_month_24" />
    </LinearLayout>

...
            android:layout_weight="1"
            android:text="-"
            android:textAlignment="center"
            android:textSize="19sp" />

        <ImageView
            android:id="@+id/endDateImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_calendar_month_24" />
    </LinearLayout>

...
        android:id="@+id/minPriceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Precio mínimo: 0€" />

    <SeekBar
        android:id="@+id/minPriceSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="1000" />

    <TextView
        android:id="@+id/maxPriceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Precio máximo: 1000€" />

    <SeekBar
        android:id="@+id/maxPriceSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="1000"
        android:progress="1000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:visibility="invisible" />

    <CheckBox
        android:id="@+id/airportCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Aeropuertos de salida a 30 kms de mí" />

    <LinearLayout
        android:layout_width="match_parent"
...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Button"
            android:visibility="invisible" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Guardar y volver" />

        <Button
...
