...
    <string name="register_verification_mail_error">Correo no validado.</string>
    <string name="login_error_email_verified_no">No enviar otro correo de validación.</string>
    <string name="register_reset_mail_error">Correo electrónico inválido.</string>
    <string name="default_web_client_id">46254930699-7nsf20phn780l5cddfka0c8okg2tva2f.apps.googleusercontent.com</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="location_rationale">Los permisos de ubicación son necesarios para el funcionamiento de la aplicación.</string>
    <string name="location_rationale_ok">Aceptar</string>
    <string name="location_denied">Permiso imprescindible denegado</string>
    <string name="login_error_mail_empty">El campo de correo electrónico está vacío</string>
    <string name="login_error_pass_empty">El campo de contraseña está vacío</string>
    <string name="register_verification_mail_not_sent">No ha sido posible enviar un correo de verificación.</string>
    <string name="login_error_google_play_services">Parece que Google Play Services no está actualizado.</string>
    <string name="login_error_google_play_services_yes">Actualizar</string>
    <string name="login_error_google_play_services_no">Cancelar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
