<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="cardView1" type="id"/>
    <item name="cardView2" type="id"/>
    <item name="cardView3" type="id"/>
</resources>